<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GADC Ball</string>
    
    <string name="start_but_title">Start game</string>
    <string name="opt_but_title">Options</string>
    <string name="about_but_title">About</string>
    
    <string name="start_game_title">Start game</string>
    <string name="choose_type_text">Choose a gametype&#8230;</string>
    <string name="choose_level_text">Choose a level&#8230;</string>
    
    <string name="single_but_title">Singleplayer</string>
    <string name="challenge_but_title">Challenge multiplayer</string>
    <string name="coop_but_title">Coop multiplayer</string>
    
    <string name="choose_networkmode">Choose a network mode.</string>
    <string name="start_server">start a new server</string>
    <string name="start_client">search exiting servers&#160;&#8230;</string>
    <string name="located_servers">Following servers are located on your network:</string>
    <string name="waiting">waiting&#160;&#8230;</string>
    <string name="connection_waiting">waiting for enough connected clients&#160;&#8230;</string>
    <string name="start_game">start game</string>
    <string name="cancel">cancel</string>
    
    <string name="server_check">act as server</string>

</resources>