<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	
	<Button 
        android:id="@+id/singleBut"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="#ea0e0e"
        android:text="@string/single_but_title"
        android:onClick="onSingleButClick"
    />
    <Button 
        android:id="@+id/challengeBut"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="#0000ff"
        android:text="@string/challenge_but_title"
        android:onClick="onChallengeButClick"
    />
    <Button 
        android:id="@+id/coopBut"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="#f6ff02"
        android:text="@string/coop_but_title"
        android:textColor="#000000"
        android:onClick="onCoopButClick"
    />
	
    
</LinearLayout>